yaml/istio_gw.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: hello-gateway
  namespace: default
spec:
  selector:
    istio: ingress
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
